--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+* {
+    cursor: none;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -9,6 +13,7 @@ h1 {
     text-align: center;
     text-decoration: solid;
     text-shadow: 2px;
+    margin: 10px;
 }
 
 main {
